@@ -1,5 +1,14 @@
 2012-09-21  Sam Weinig  <sam@webkit.org>
 
+        Fix the Lion and Snow Leopard builds.
+
+        * UIProcess/Launcher/mac/ProcessLauncherMac.mm:
+        (WebKit::connectToWebProcessServiceForWebKitDevelopment):
+        (WebKit::createWebProcessServiceForWebKitDevelopment):
+        (WebKit::createWebProcessService):
+
+2012-09-21  Sam Weinig  <sam@webkit.org>
+
         WebProcess XPC services need have their environment set without disrupting all other XPC services
         https://bugs.webkit.org/show_bug.cgi?id=95161
 
